ansible-kub/roles/node/files/node/deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
spec:
  selector:
    matchLabels:
      app: cart
      # tier: cart
      # track: stable
  # replicas: 1
  template:
    metadata:
      labels:
        app: cart
        tier: cart
        track: stable
    spec:
      containers:
        - name: cart
          image: kkarim69/nodetest:latest
        - name : MONGO_URL
          value: mongodb+srv://karim:stargatesg71@clustercart.2roa2cs.mongodb.net/
          # Use secret in real usage
        - name: PORT
          value: 8000
          ports:
            - name: http
              containerPort: 8000
      #     volumeMounts:
      #       - name: my-pv
      #         mountPath: /data
      # volumes:
      #   - name: my-pv
      #     persistentVolumeClaim:
      #       claimName: my-pvc
