ansible-kub/roles/node/files/node/deployementpv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: node
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: node
          mountPath: /data/test
      volumes:
        - name: node
          hostPath:
            path: /data/test
