ansible-kub/roles/node/files/node/service.yml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  selector:
    app:  cart
  # type:  LoadBalancer
  ports:
  - protocol: TCP
    port:  80
    targetPort:  80

#  | ClusterIP | NodePort
