ansible-kub/roles/node/files/node/vp.yml
kind: Service
apiVersion: v1
metadata:
  name: my-pv
spec:
  selector:
    app:  cart
  # type:  LoadBalancer | ClusterIP | NodePort
  ports:
  - protocol: TCP
    port:  80
    targetPort:  80
